--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2559,6 +2559,8 @@ input, select, textarea {
 
 		.work-item .image {
 			margin: 0 0 1.5em 0;
+			border-radius: 0.35em;
+			border: solid 3px #efefef;
 		}
 
 		.work-item h3 {
