--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2134,7 +2134,7 @@ input, select, textarea {
 			}
 
 		.image.avatar {
-			border-radius: 100%;
+			border-radius: 0; /* remove border radius */
 		}
 
 			.image.avatar:before {
@@ -2142,7 +2142,7 @@ input, select, textarea {
 			}
 
 			.image.avatar img {
-				border-radius: 100%;
+				/* border-radius: 100%; */
 				width: 100%;
 			}
 
@@ -2642,7 +2642,7 @@ input, select, textarea {
 
 		#header .image.avatar {
 			margin: 0 0 1em 0;
-			width: 6.25em;
+			width: 50%; /* 6.25em; */
 		}
 
 /* Footer */
